fix main paragraph's alignment

--- a/style.css
+++ b/style.css
@@ -212,6 +212,10 @@ ul li {
     text-align: center;
   }
 
+  .main-paragraph {
+    margin-inline: auto;
+  }
+
   .ratings {
     margin-top: 2rem;
   }
